--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,7 +18,7 @@ body {
   overflow: hidden;
 }
 .container {
-  padding: 0 20px;
+  width: calc(100% - 40px);
   margin: 0 auto;
 }
 .section {
@@ -27,19 +27,13 @@ body {
 
 @media screen and (min-width: 375px) {
   .container {
-    width: 375px;
-    padding: 0 20px;
-    margin: 0 auto;
-  }
-  .section {
-    padding: 80px 0;
+    width: 335px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
-    padding: 0 32px;
+    width: 704px;
   }
   .section {
     padding: 100px 0;
@@ -48,7 +42,6 @@ body {
 
 @media screen and (min-width: 1280px) {
   .container {
-    width: 1280px;
-    padding: 0 100px;
+    width: 1080px;
   }
 }
