--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,8 +7,8 @@
 
 .head {
   z-index: 999;
-  max-width: 375px;
-  padding: 20px;
+  max-width: 335px;
+  padding: 20px 0;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -60,8 +60,8 @@
 
 @media screen and (min-width: 768px) {
   .head {
-    max-width: 768px;
-    padding: 32px;
+    max-width: 704px;
+    padding: 32px 0;
   }
 
   .logo-text-button {
@@ -96,8 +96,8 @@
 
 @media screen and (min-width: 1280px) {
   .head {
-    max-width: 1280px;
-    padding: 32px 100px;
+    max-width: 1080px;
+    padding: 32px 0;
   }
 
   .header-menu-wrap {
