--- a/src/css/how-it-works.css
+++ b/src/css/how-it-works.css
@@ -1,11 +1,12 @@
-
 /* how-it-works */
 
 .how-it-works {
   background-color: #576f35;
+  padding-top: 0;
 }
 
-.how-top-wrap {
+.how-it-works-container {
+  width: 100%;
   background-image: linear-gradient(#7a3145, #7a3145);
   padding-top: 40px;
   padding-bottom: 40px;
@@ -13,7 +14,7 @@
 
 .how-img-wrap {
   position: relative;
-  width: 335px;
+  width: calc(100% - 40px);
   margin: 0 auto;
 }
 
@@ -35,7 +36,6 @@
 .how-bottom-wrap {
   background-image: linear-gradient(#576f35, #576f35);
   padding-top: 80px;
-  padding-bottom: 80px;
 }
 
 .how-title {
@@ -122,6 +122,12 @@
   color: #141414;
 }
 
+@media screen and (min-width: 375px) {
+  .how-img-wrap {
+    width: 335px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .how-top-wrap {
     padding-top: 100px;
@@ -199,5 +205,4 @@
   .how-tree-child {
     margin-right: 20px;
   }
-
 }
